--- a/content/resources/mit15_768f10_lec06.md
+++ b/content/resources/mit15_768f10_lec06.md
@@ -3,6 +3,7 @@ content_type: resource
 description: 'This resource contains information related to clock speed and disruptions. '
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/15-768-management-of-services-concepts-design-and-delivery-fall-2010/e48add17821bdd28c23c3c89e61e5483_MIT15_768F10_lec06.pdf
 file_type: application/pdf
+parent_uid: 2501e907-9da1-5aef-9b0e-f0351c368cc4
 resourcetype: Document
 title: MIT15_768F10_lec06.pdf
 uid: e48add17-821b-dd28-c23c-3c89e61e5483
