--- a/content/resources/mit15_768f10_lec09-10.md
+++ b/content/resources/mit15_768f10_lec09-10.md
@@ -4,6 +4,7 @@ description: 'This resource contains information related to service operations f
   II and III. '
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/15-768-management-of-services-concepts-design-and-delivery-fall-2010/eadc63624af3de30d642f9463a1ed612_MIT15_768F10_lec09-10.pdf
 file_type: application/pdf
+parent_uid: 2501e907-9da1-5aef-9b0e-f0351c368cc4
 resourcetype: Document
 title: MIT15_768F10_lec09-10.pdf
 uid: eadc6362-4af3-de30-d642-f9463a1ed612
