--- a/content/resources/mit15_768f10_lec19a.md
+++ b/content/resources/mit15_768f10_lec19a.md
@@ -4,6 +4,7 @@ description: 'This resource contains information related to web services, cloud 
   and digital media. '
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/15-768-management-of-services-concepts-design-and-delivery-fall-2010/c21762d6f09a9a73ea289b17fe334e07_MIT15_768F10_lec19a.pdf
 file_type: application/pdf
+parent_uid: 2501e907-9da1-5aef-9b0e-f0351c368cc4
 resourcetype: Document
 title: MIT15_768F10_lec19a.pdf
 uid: c21762d6-f09a-9a73-ea28-9b17fe334e07
