--- a/content/resources/mit15_768f10_lec22.md
+++ b/content/resources/mit15_768f10_lec22.md
@@ -4,6 +4,7 @@ description: 'This resource contains information related to supply chain systems
   social responsibility. '
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/15-768-management-of-services-concepts-design-and-delivery-fall-2010/c984de60525af2ca0624c05d57b774a8_MIT15_768F10_lec22.pdf
 file_type: application/pdf
+parent_uid: 2501e907-9da1-5aef-9b0e-f0351c368cc4
 resourcetype: Document
 title: MIT15_768F10_lec22.pdf
 uid: c984de60-525a-f2ca-0624-c05d57b774a8
