--- a/content/resources/mit15_768f10_paper01.md
+++ b/content/resources/mit15_768f10_paper01.md
@@ -4,6 +4,7 @@ description: 'This resource contains information related to vapiano Vs Trattoria
   Panino.   '
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/15-768-management-of-services-concepts-design-and-delivery-fall-2010/8067edb22cc16cf4545774e70d243912_MIT15_768F10_paper01.pdf
 file_type: application/pdf
+parent_uid: 1ad10432-f179-6663-7995-5bdcb97b65ac
 resourcetype: Document
 title: MIT15_768F10_paper01.pdf
 uid: 8067edb2-2cc1-6cf4-5457-74e70d243912
