--- a/content/resources/mit15_768f10_paper05.md
+++ b/content/resources/mit15_768f10_paper05.md
@@ -4,6 +4,7 @@ description: 'This resource contains information related to trader Joe''s Vs who
   foods. '
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/15-768-management-of-services-concepts-design-and-delivery-fall-2010/122074ce21540d032c3eee83794962ea_MIT15_768F10_paper05.pdf
 file_type: application/pdf
+parent_uid: 1ad10432-f179-6663-7995-5bdcb97b65ac
 resourcetype: Document
 title: MIT15_768F10_paper05.pdf
 uid: 122074ce-2154-0d03-2c3e-ee83794962ea
