--- a/content/resources/mit15_768f10_paper06.md
+++ b/content/resources/mit15_768f10_paper06.md
@@ -4,6 +4,7 @@ description: 'This resource contains information related to cleveland clinic Vs 
   minute clinic. '
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/15-768-management-of-services-concepts-design-and-delivery-fall-2010/9aaed4487daef54f07549b709b1d9904_MIT15_768F10_paper06.pdf
 file_type: application/pdf
+parent_uid: 1ad10432-f179-6663-7995-5bdcb97b65ac
 resourcetype: Document
 title: MIT15_768F10_paper06.pdf
 uid: 9aaed448-7dae-f54f-0754-9b709b1d9904
